fix(root): asideblockmenu + align block

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -199,7 +199,3 @@ body {
 .ProseMirror-focused {
     outline: none;
 }
-
-.node-paragraph {
-    padding: 10px 0;
-}
